除了历史记录和个人信息管理 其他的都ok

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -17,7 +17,7 @@
 			<ul>
 				<li><a href="#">登陆/注册</a></li>
 				<li><a href="#">|</a></li>
-				<li><a href="#">我的账户</a></li>
+				<li><a href="DingDan.html">我的账户</a></li>
 				<li><a href="#">|</a></li>
 				<li id="shoppingcar">
 					<a href="#"><i class="fa fa-shopping-cart"></i>&nbsp;购物车</a>
@@ -28,10 +28,10 @@
 						<div class="hm_list">
                             <div id="hml_title">
 								<b id="hml_1">我的购物车</b>
-                              	<b class="hml_2">1件商品</b>
+                            <b class="hml_2"></b>  
 							</div>
 							<div id="hml_coms">
-							  	<div class="hml_com">
+							  <!-- 	<div class="hml_com">
 									<div class="hmlc">
 								  		<img src="images/com_1.jpg" width="60px" height="60px" alt=""/>
 										<div class="hmlc_com" align="left">
@@ -47,8 +47,8 @@
 											<p class="hmlcc_3">￥399</p>
 										</div>
 									</div>
-								</div>
-								<div class="hml_com">
+								</div> -->
+								<!-- <div class="hml_com">
 									<div class="hmlc">
 								  		<img src="images/com_1.jpg" width="60px" height="60px" alt=""/>
 										<div class="hmlc_com" align="left">
@@ -64,15 +64,16 @@
 											<p class="hmlcc_3">￥399</p>
 										</div>
 									</div>
-								</div>
+								</div> -->
 							</div>
 							<div id="hml_total">
 								<p align="left">总计
-									<b id="totalprice">￥798.00</b>
+									<b id="totalprice"><!-- ￥798.00 --></b>
 								</p>
-								<input type="button" value="查看购物车" />
+								<input type="button" value="查看购物车"  onclick="gotoShopcart()"/>
 							</div>
-					  </div>
+					   </div>   <!-- 查看购物车  -->
+					  
 					</div>
 				</li>
 				<li><a href="#">|</a></li>
