--- a/WebContent/show.html
+++ b/WebContent/show.html
@@ -16,7 +16,7 @@
 				<li><a href="#">我的账户</a></li>
 				<li><a href="#">|</a></li>
 				<li id="shoppingcar">
-					<a href="#"><i class="fa fa-shopping-cart"></i>&nbsp;购物车</a>
+					<a href='#' onclick="carta()"><i class="fa fa-shopping-cart"></i>&nbsp;购物车</a>
 					<div class="header_menu" align="center" hidden="true">
                         <div id="hm_i">
 							<i class="fa fa-sort-asc fa-2x fa-inverse"></i>
