最终决定版

--- a/WebContent/buy.html
+++ b/WebContent/buy.html
@@ -12,7 +12,7 @@
      <header>
 		<div class="ul_01">
 			<ul>
-				<li><a href="#">登陆/注册</a></li>
+				<li><a href="#" id="aaa"><!-- 登陆/注册 --></a></li>
 				<li><a href="#">|</a></li>
 				<li><a href="#">我的账户</a></li>
 				<li><a href="#">|</a></li>
