--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -213,6 +213,7 @@
 					
 					location.href='index.html';              /* #'+data.usid+' */
 					sessionStorage.setItem("usid", data.usid);
+					sessionStorage.setItem("tel", data.tel);
 				}else{
 					alert("账号或密码错误");
 				}
@@ -228,8 +229,7 @@
 			}else{
 				$.post("getMessageServlets", {op:"sendCode", phone:phone},function (code) {
 					if (code !== verify){
-						alert("手机验证码错误")
-					}else{
+						alert("手机验证码错误");
 						location.reload();
 					}
 				},"text");
